# Pacman-Project

PacMan/: CMakeLists.txt  ReadMe.md  ReadMe.txt  animationWithMap.cpp  animationWithMapVelocity.cpp  main.cpp  map_demo.cpp  pacManAnimation.cpp
PacMan/AnimationClass/: CMakeLists.txt  animation.cpp  animation.h  animation_unit_test.cpp
PacMan/CharacterClass/: CMakeLists.txt  PC_Character.cpp  PC_Character.h  character_unit_test.cpp
PacMan/ConsumableClass/: CMakeLists.txt  consumable.cpp  consumable.h  unit_tests.cpp
PacMan/GhostClass/: CMakeLists.txt  Ghost.cpp  Ghost.h  GhostManager.cpp  GhostManager.h  GhostParams.h  Visualize.cpp  chase_test.cpp  collide_reverse_test.cpp  ghost_demo.cpp  ryanMap.h  scatter_test.cpp
PacMan/MapClass/: CMakeLists.txt  map.h  map_unit_test.cpp
PacMan/PacManClass/: CMakeLists.txt  PC_PacMan.cpp  PC_PacMan.h  pacman_unit_test.cpp
PacMan/ScoreBoardClass/: CMakeLists.txt  highscores_test.txt  score_unit_test.cpp  scoreboard.h
PacMan/SoundClass/: CMakeLists.txt  sound.h
PacMan/data/maps/: map1.txt  map2.txt
PacMan/simplebitmap/: CMakeLists.txt  simplebitmap.cpp  simplebitmaptemplate.h
